--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
 }
 
 .abonements {
-  background: #f7f7f7 url("./image/Ellipse.png") no-repeat 50% 50%;
+  background: #f7f7f7 url("../image/Ellipse.png") no-repeat 50% 50%;
   width: 1440px;
   height: 556px;
 }
